# linux_logo

./: .gitignore  12_years_ll.txt  ANNOUNCE  ANNOUNCE.logo  BUGS  CHANGES  CHANGES_IN_5.00  CHANGES_IN_6.0  LINUX_LOGO.FAQ  Makefile  Makefile.default  Makefile.in  NEWS  README  README.CUSTOM_LOGOS  README.SECURITY  README.history  RELEASE_PROCEDURE  TODO  USAGE  USAGE.FAQ  aix.h  ascii_banner.h  ascii_penguin.h  banner.h  bogomips.c  config.h  config.h.in  configure  configure.in  configure.todo  cpuinfo  default.h  defaults.h  getsysinfo.c  getsysinfo.h  i18n.h  intl_test.c  irix.h  libsysinfo  (+90 more)
banner_logos/: banner_simple.h  blue_banner.h  slack_banner.h  suse_banner.h
classic_logos/: aix.h  debian_ascii.h  debian_color.h
contrib/: INDEX  banner_plain.h  blue_logo  login_script  penguin.gfx  suse.ansi
libsysinfo-0.0.1/: CHANGES  Makefile  README  arch.h  configure.c  version.h
libsysinfo-0.0.2/: CHANGES  Makefile  sysinfo.h  version.h
libsysinfo-0.0.3/: CHANGES  Makefile  arch.h  configure.c  version.h
libsysinfo-0.0.4/: CHANGES  README  arch.h  version.h
libsysinfo-0.0.5/: CHANGES
libsysinfo-0.0.6/: CHANGES  Makefile  TODO  arch.h  configure.c  version.h
libsysinfo-0.0.7/: CHANGES  TODO  arch.h  configure.c  version.h
libsysinfo-0.0.8/: CHANGES  Makefile  arch.h  configure.c  sysinfo.h  version.h
libsysinfo-0.1.0/: CHANGES  Makefile  Makefile.defaults  sysinfo.h
libsysinfo-0.2.0/: Makefile  Makefile.default  (+4 more)
src/: Makefile  Makefile.in  configure.in  linux_logo.c  sysinfo.c  sysinfo_aix.c  sysinfo_m68k.c  sysinfo_ppc.c  sysinfo_sparc.c
(+312 files in other folders)
