dnl Process this file with autoconf to produce a configure script.
AC_INIT()
AC_CONFIG_HEADER(config.h)

AC_CANONICAL_SYSTEM

case "$target_os" in
     linux-*) detected_os=LINUX ;;
     irix-*)  detected_os=IRIX ;;
esac

AC_SUBST(detected_os)

case "$target_cpu" in
      i*) detected_cpu=ix86 ;;
      alpha) detected_cpu=alpha ;;
      arm)   detected_cpu=arm ;;
      m68k)  detected_cpu=m68k ;;
      mips)  detected_cpu=mips ;;
      ppc)   detected_cpu=ppc ;;
      sparc) detected_cpu=sparc ;;
esac
     
AC_SUBST(detected_cpu)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROGS(UNAME, uname)

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strdup strstr strtol uname)

AC_OUTPUT(src/Makefile Makefile, echo timestamp > stamp-h)
